<resources>
    <string name="app_name">67th Milestone</string>
    <string name="about_us">BML Munjal University (BMU), found in 2014 by The Hero Group and mentored by Imperial College London, has excelled in the field of academics and innovative learning. BMU is associated with foreign universities like Singapore Management University and University of Texas to fulfill its vision and offer global-approach exposure to its students. The former President of India, Shri Pranab Mukherjee, also resolute the status of BML Munjal University as one of the finest private colleges in the developing Indian sub-continent on July 12, 2017.

BMU has achieved several milestones in the field of academics, sports, annual sports, research conferences etc. BMU aims to create ethical leaders who are skilled, knowledgeable and possess life skills essential for leading organizations to heightened results. BMU is creating an enabling environment for a sustainable college life. Through collaborations with KPMG, IBM, Siemens, Hero MotoCorp and other leading companies, our students are a step forward for their future growth and development BML Munjal University hosts a flamboyant and diverse student community hailing from Jammu to Tamil Nadu that joins together to form an union in the country’s growth and development through their unique vision. The gates of the college are open for students which will amplify their presence into a vast land of opportunities. We not only excel in academics but also provide a nourishment to create an Individual and hone it’s personality to its pinnacle.

Various events have been conducted in past few years with great success. They have been a great opportunity for students to show their talent, colleges their magnificence and sponsors their branding. The students of BML Munjal University are the driving force of the University who are global-ready and wish to create a difference in the society through their dedication and talent.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">About the University</string>
    <string name="junkyard_desc">The participants will be given random scrap material (the only inventory) out of which you have to build a working model (machine) which can perform the specified task. It’s a test of your dexterity and intuitive thought process. The competition aims to test how one quick and creative one can be at the same time and solve a problem. That’s Junkyard Wars is about.</string>
    <string name="trasure_desc">We bring you a scientific cryptic mystery and a unique adrenaline-rush experience as you try to put together the pieces of solutions to solve the puzzle and get to the final treasure. Not a pirates game, but rather a nerds playground. Have that jolt of adrenaline in you and channelize your inner Sinbad as the deadly curses and the glorious treasures surround you. Gather your spirits, open up your maps, before the treasure is found or lost forever. So, find your next clue before all the treasure goes.</string>
    <string name="virtualsm">Let’s check your Marketing Skills now! Participate in a team of 4 and invest in gold, stock market, commodity market and derivatives. After investing for 3 consecutive days, the team with highest profit wind! A game of decision making where you will be asked to closely follow the stocks and their movements to buy or sell them. So get ready to lock horns with the stock market and its uncertain rise and falls. We eagerly await your presence for the event. Get Ready to show your ‘Intelligent Investing’ skills. Brace yourself to be the Wolf of the Stock Market!</string>
    <string name="generalquiz">Think you are the smarty pants, then prove it! Get ready to brainstorm your minds, crack open some puzzles and hit some buzzers. It is not going to be easy. So flex your brainy muscles, gather some knowledge and get ready to be quizzed in a challenge like never before.</string>
    <string name="slampoetry">Have something in heart you could never express? Were your feelings ever suppressed? Do you feel something inside you is fortified? The Speakeasy Club visions to enhance the creative expression of an individual to portray using the convention of art and literature. Poetry has always been a catalyst to express varied emotions and feelings one goes along in his life. Hence the Speakeasy Club has organized a solo slam Poetry where everyone can share his wordings and poem on a given theme. This competition will test the ability of each individual who has a command on his poems. Calling out all the poets and shayars in the arena in an all-out battle. Then take this moment to break the walls and rise like a phoenix from the ashes of dead in desires. Rhyme and say whatever you want to. Break the dams and let others flow in the flood of your emotions.</string>
    <string name="aboutus1">Founded by The Hero Group, BML Munjal University (BMU) is a not-for-profit initiative offering undergraduate and post-graduate courses in management (MBA and BBA) and undergraduate courses in engineering (BTech) and commerce (BCom (Hons)). The University has been founded with the objective of transforming higher education in India by creating a world-class teaching and learning environment. The 50-acre, fully residential and co-educational university has been notified under the Haryana State Private Universities Act, 2006.</string>
    <string name="aboutus2">Named after the chairman and founder of the Hero Group, Brijmohan Lall Munjal, BMU is engaged in creating, preserving and imparting internationally benchmarked knowledge and skills to a diverse community of students from across the world. The Hero Group is a US$ 5 billion group which includes Hero MotoCorp – the world’s largest two-wheeler manufacturer.</string>
    <string name="aboutus3">BMU is mentored by Imperial College London, the 108-year old University that is currently ranked 9th in the QS World University rankings (2016-2017).</string>
    <string name="aboutus4">The campus is located at the 67th KM stone on NH-8, District Gurgaon, Haryana, about 50 km from New Delhi International Airport.</string>
    <string name="title_activity_schedule">schedule</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="disc1">A tyvek band will be issued after the necessary registration fee is paid for the fest.</string>
    <string name="disc2">In case the tyvek band is lost,the student will not be allowed to participate in any events till he/she gets a new band.</string>
    <string name="disc3">If the tyvek band is lost,he/she needs to pay Rs 100 for getting a new tyvek band.</string>
    <string name="disc4">Accommodation Fee is not included in the registration fee. If the student wants to avail accommodation, he/she needs to pay for the accommodation.</string>
    <string name="disc5">Prize Money for different events is subject to change.</string>
    <string name="disc6">The cancellation of the event will be on the discretion of the event organizer.</string>
    <string name="disc7">A minimum number of participants are required for the event to be valid for prize money.</string>
    <string name="disc8">Although, prizes worth will be awarded to winners in case the participation is less than the required number.No participation fee will be reimbursed once been paid.</string>
    <string name="about_the_fest">BML Munjal University is hosting its second annual techno-cultural management fest, “67th Milestone” from April 5-7, 2018. 67th Milestone is a multi-faceted program which will be hosting a wide range of cultural and technical events. Throughout its journey, it will offer a platform for artists to perform, techies to scratch their head, speed enthusiasts to get behind the wheel and fashion freaks to walk the ramp.</string>
    <string name="about_the_fest1">67th Milestone uniquely distinguishes itself by offering companies an opportunity to hold recruitment rounds for students. Students, as well as other individuals present for this promising event, will have the opportunity for a lifetime to gain inspiration and interact with eminent leaders of the industry, executives from leading business houses and achievers from their respective spheres.</string>
    <string name="about_the_fest2">With 67th Milestone only a few weeks away, every corner of the campus is eavesdropping and has some gossip about what the 67th Milestone is offering. Vivaciousness and zealousness amongst students are at its peak and they are leaving no stone unturned to benchmark the first of its kind techno-cultural management fest, “67th Milestone.” Its vision is to always strive and create the proactive experience of entertainment and magnify the strike of events, thereby the 67th Milestone has created a more superior stack stored for you on this occasion. We are immensely proud to announce you that this year there is a surprising bonanza – all events are based on the theme “TV Series” that is profound to enhance this fest’s liveliness and strike on all the unexplored domains.</string>
    <string name="battleofbandsdesc">Music doesn’t lie; it expresses what cannot be said in words, it conveys emotions which are hard to be kept and impossible to be silent upon. Battle of bands is an electrifying and dazzling display of young musical talent that will leave you spell-bound and mesmerized. BMU is ready with a paradise of the BATTLE OF BANDS.</string>
    <string name="fashioncravedesc">Bring out the “fashionista” in you and let your glamour and style set the stage on fire! Walk the ramp and make the audience go crazy with your elegance! Enthrall the audience with your glamour, attitude, style and smile. Let out and shine in the plaza of beauty of models.</string>
    <string name="btsdesc">Tap In to the rhythm and move your soul out. Want to be that dancing star you always dreamt of? Well then, Can you hear it coming? Reduce your stress, help your heart with own frame of dance moves, so get your music and your team to BEAT THE STREET @BMU. Celebrate your minds, spirit and shape with the joy of dancing. Come, join us and dance with the whole world at your feet.</string>
    <string name="rcdesc">So, come and race against your rivals and prove your machine worthy at the 67th milestone 2018 with Nitro car- A remote-controlled IC engine car race.Get ready to set the track on fire with your very own Remote controlled cars. Hit it as soon as the green pops and honestly..... if you are still in control, you are not fast enough. Line follower robot: Keep the little brat in line.. Participate in our line follower robot competition and get your little guy featured. This good for beginners.</string>
    <string name="theatredesc">By the time you thought that you were learning to act, you already learnt to act. We all are born actors. From faking a cry to get our favourite toy, to making a teacher believe that we won’t repeat our mischief again. From mimicking for proxies to acting like we are thinking hard in the examination hall when invigilator catches us exchanging actions with our friends. The one closer to the actor inside him, steals the show. For all such talented young people we have our stage set. Just feel that this is all you know and let the best of your talent be in side out, setting fires on stage.</string>
</resources>